--- a/webapp/frontend/package.json
+++ b/webapp/frontend/package.json
@@ -18,7 +18,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "lucide-react": "^0.553.0",
-    "next": "15.5.6",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.1",
@@ -34,7 +34,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
